<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"indir.com Yarışma"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_facebook">Facebook ile giriş</string>
    <string name="login_twitter">Twitter ile giriş</string>
    <string name="facebook_app_id">726648720787445</string>
    <string name="loading_page_message">Sayfa yükleniyor.</string>
    <string name="connection_error">Lütfen internet bağlantınızı kontrol ediniz.</string>
    <string name="header_login">Mobil uygulamalar yarışıyor!</string>
    <string name="content_info">Halk oylamasından geçen 10 uygulama jüri tarafından değerlendiriliyor. Kazanan uygulamalar büyük ödüllere kavuşuyor.</string>
    <string name="about">Hakkında</string>
    <string name="indircom_app_name_place_holder">app_name</string>
    <string name="app_category_place_holder">indircom app category</string>
    <string name="app_description_placeholder">indircom_app_description</string>
    <string name="app_download_message">İNDİR</string>
    <string name="cannot_download_app">Bu uygulama sadece iOS platformu için yayındadır.</string>

    <!-- Empty page texts when all apps voted -->
    <string name="congrats_header">TEBRİKLER!</string>
    <string name="congrats_content">Tüm uygulamaları oyladınız. Uygulamalara destek olduğunuz için teşekkür ederiz. Gelişmeleri "www.indir.com/yarisma" adresinden takip edebilirsiniz.</string>
    <string name="app_version">Application Version</string>
    <string name="fetching_app_message">Oylanacak uygulama listesi yüklenirken lütfen bekleyiniz.</string>
    <string name="user_registration_loading_message">Kullanıcı kayıt edilirken lütfen bekleyiniz</string>


</resources>
