<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageview_app_detail_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <co.mobiwise.indircom.views.RobotoMediumTextView
        android:id="@+id/textview_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_app_detail_image"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/indircom_app_name_place_holder"
        android:textSize="20sp" />

    <co.mobiwise.indircom.views.RobotoTextView
        android:id="@+id/textview_app_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/app_category_place_holder"
        android:textSize="16sp" />

    <co.mobiwise.indircom.views.RobotoTextView
        android:id="@+id/textview_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_app_category"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/app_description_placeholder"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/layout_app_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/facebook_login_button_color"
        android:gravity="center"
        android:onClick="openGooglePlayPage"
        android:padding="14dp">

        <ImageView
            android:id="@+id/icon_facebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher" />

        <co.mobiwise.indircom.views.RobotoTextView
            android:id="@+id/textview_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_facebook"
            android:layout_toRightOf="@+id/icon_facebook"
            android:text="@string/app_download_message"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>